--- a/Generalized GSEA/.project
+++ b/Generalized GSEA/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Generalized GSEA</name>
+	<name>Generalized Enrichment</name>
 	<comment></comment>
 	<projects>
 	</projects>
