--- a/Genaralized Enrichment/.classpath
+++ b/Genaralized Enrichment/.classpath
@@ -20,5 +20,6 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="/Users/luopin/Downloads/commons-lang3-3.9/commons-lang3-3.9.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
